2008-09-01  Dan Winship  <danw@gnome.org>

	* configure.in: 2.23.91

	* NEWS: update

2008-08-25  Dan Winship  <danw@gnome.org>

	* libsoup/soup-uri.h (SOUP_URI_VALID_FOR_HTTP): new macro to check
	if a URI is a valid http or https URI.

	* libsoup/soup-uri.c (soup_uri_new_with_base): Update http/https
	check to use SOUP_URI_VALID_FOR_HTTP().

	* libsoup/soup-session.c (redirect_handler): Check
	SOUP_URI_VALID_FOR_HTTP() and call it an error if the check fails.

	* libsoup/soup-message.c (soup_message_new): Remove the uri->host
	check from here. Update docs to clarify that @uri must be an
	http/https URI.
	(soup_message_new_from_uri): Check SOUP_URI_VALID_FOR_HTTP().
	Update docs.
	(soup_message_set_uri): Check SOUP_URI_VALID_FOR_HTTP(). Update
	docs.

	Should prevent the crash in #528882, but there's still something
	going wrong there at a higher level.

2008-08-22  Bastien Nocera  <hadess@hadess.net>

	* libsoup/soup-date.c (soup_date_to_time_t),
	(soup_date_to_timeval):
	* libsoup/soup-date.h: Add a SoupDate to GTimeVal conversion
	function, for use in gvfs. #549006, with help from Dan Winship
	<danw@gnome.org>

2008-08-18  Dan Winship  <danw@gnome.org>

	* libsoup.pc.in (Requires): Revert previous commit; that would
	still fail in the case of an application linking against a library
	that privately links against libsoup. The only correct solution in
	the face of --as-needed (or on OSes where the linker always works
	that way) is for the module that actually calls g_thread_init() to
	explicitly link against libgthread.

2008-08-14  Dan Winship  <danw@gnome.org>

	* libsoup.pc.in (Requires): Add gthread-2.0; the app must call
	g_thread_init(), but libsoup won't pull it in itself if built with
	--as-needed, so make sure it gets pulled in from here. Noted by
	Zeeshan Ali.

	* libsoup/soup-auth.c (soup_auth_authenticate): g_return_if_fail
	if either username or password is NULL. Noted on the mailing list.
